add service assemble_scans2_blocking
Add a service that takes a blocking_period parameter. This service
waits up to the blocking period (in wall clock time) for the scans to
move past the requested time period. This ensures that the request
contains all the desired scans for the indicated time period.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,8 @@ include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 ##############################################################################
 add_service_files(FILES
 AssembleScans.srv
-AssembleScans2.srv)
+AssembleScans2.srv
+AssembleScans2Blocking.srv)
 
 generate_messages(DEPENDENCIES sensor_msgs std_msgs)
 
